Dedoubled spanish, added 'english to language' training, scroll to top on mobile, don't show correct answers again in daily challenge

--- a/client/src/menu.css
+++ b/client/src/menu.css
@@ -9,6 +9,10 @@
     padding-top: 0.5rem;
 }
 
+.menu-container i:hover {
+    cursor: pointer;
+}
+
 .menu-container button {
     width: 50%;
     margin-bottom: 1rem;
